fix: letter-spacing subtitles, content links subrayado

--- a/_sass/content.scss
+++ b/_sass/content.scss
@@ -7,6 +7,7 @@
     margin-top:2rem;
     margin-bottom:1.5rem;
     font-family: "Open Sans", sans-serif;
+    letter-spacing: 2.73px;
   }
 
   h3 {
@@ -40,5 +41,9 @@
 
   li p {
     margin-bottom: 0;
+  }
+
+  a {
+    text-decoration: underline !important;
   }
 }
